# learn-faster-kit

./: README.md  pyproject.toml
src/learn_faster/templates/: instructions.md
src/learn_faster/templates/scripts/: review_scheduler.py
