[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-learn-faster"
version = "1.2.0"
description = "Learn FASTER: Accelerate learning with spaced repetition, active practice, and teaching-based retention"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Hugo Lau", email = "cheukyin175@gmail.com" }
]
keywords = ["learning", "education", "spaced-repetition", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "inquirer>=3.1.0",
    "reportlab>=4.0.0",
]

[project.scripts]
learn-faster = "learn_faster.cli.main:main"

[project.urls]
Homepage = "https://github.com/cheukyin175/learn-faster-kit"
Repository = "https://github.com/cheukyin175/learn-faster-kit"
Issues = "https://github.com/cheukyin175/learn-faster-kit/issues"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/learn_faster"]

[tool.hatch.build.targets.wheel.force-include]
"src/learn_faster/templates" = "learn_faster/templates"
